prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sort_2.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect { AA=album_id, artist_id }\nsort AA\nfilter AA >= 25\njoin artists (==artist_id)\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_2.prql
---
frames:
- - 1:12-45
  - columns:
    - !Single
      name:
      - AA
      target_id: 136
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 137
      target_name: null
    inputs:
    - id: 134
      name: albums
      table:
      - default_db
      - albums
- - 1:46-53
  - columns:
    - !Single
      name:
      - AA
      target_id: 136
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 137
      target_name: null
    inputs:
    - id: 134
      name: albums
      table:
      - default_db
      - albums
- - 1:54-69
  - columns:
    - !Single
      name:
      - AA
      target_id: 136
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 137
      target_name: null
    inputs:
    - id: 134
      name: albums
      table:
      - default_db
      - albums
- - 1:70-96
  - columns:
    - !Single
      name:
      - AA
      target_id: 136
      target_name: null
    - !Single
      name:
      - albums
      - artist_id
      target_id: 137
      target_name: null
    - !All
      input_id: 122
      except: []
    inputs:
    - id: 134
      name: albums
      table:
      - default_db
      - albums
    - id: 122
      name: artists
      table:
      - default_db
      - artists
nodes:
- id: 122
  kind: Ident
  span: 1:75-82
  ident: !Ident
  - default_db
  - artists
  parent: 152
- id: 134
  kind: Ident
  span: 1:0-11
  ident: !Ident
  - default_db
  - albums
  parent: 139
- id: 136
  kind: Ident
  span: 1:24-32
  alias: AA
  ident: !Ident
  - this
  - albums
  - album_id
  targets:
  - 134
  parent: 138
- id: 137
  kind: Ident
  span: 1:34-43
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 134
  parent: 138
- id: 138
  kind: Tuple
  span: 1:19-45
  children:
  - 136
  - 137
  parent: 139
- id: 139
  kind: 'TransformCall: Select'
  span: 1:12-45
  children:
  - 134
  - 138
  parent: 142
- id: 140
  kind: Ident
  span: 1:51-53
  ident: !Ident
  - this
  - AA
  targets:
  - 136
  parent: 142
- id: 142
  kind: 'TransformCall: Sort'
  span: 1:46-53
  children:
  - 139
  - 140
  parent: 147
- id: 143
  kind: RqOperator
  span: 1:61-69
  targets:
  - 145
  - 146
  parent: 147
- id: 145
  kind: Ident
  span: 1:61-63
  ident: !Ident
  - this
  - AA
  targets:
  - 136
- id: 146
  kind: Literal
  span: 1:67-69
- id: 147
  kind: 'TransformCall: Filter'
  span: 1:54-69
  children:
  - 142
  - 143
  parent: 152
- id: 148
  kind: RqOperator
  span: 1:84-95
  targets:
  - 150
  - 151
  parent: 152
- id: 150
  kind: Ident
  span: 1:86-95
  ident: !Ident
  - this
  - albums
  - artist_id
  targets:
  - 137
- id: 151
  kind: Ident
  span: 1:86-95
  ident: !Ident
  - that
  - artists
  - artist_id
  targets:
  - 122
- id: 152
  kind: 'TransformCall: Join'
  span: 1:70-96
  children:
  - 147
  - 122
  - 148
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - albums
                span: 1:5-11
            span: 1:0-11
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:12-18
              args:
              - Tuple:
                - Ident:
                  - album_id
                  span: 1:24-32
                  alias: AA
                - Ident:
                  - artist_id
                  span: 1:34-43
                span: 1:19-45
            span: 1:12-45
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:46-50
              args:
              - Ident:
                - AA
                span: 1:51-53
            span: 1:46-53
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:54-60
              args:
              - Binary:
                  left:
                    Ident:
                    - AA
                    span: 1:61-63
                  op: Gte
                  right:
                    Literal:
                      Integer: 25
                    span: 1:67-69
                span: 1:61-69
            span: 1:54-69
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:70-74
              args:
              - Ident:
                - artists
                span: 1:75-82
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - artist_id
                    span: 1:86-95
                span: 1:84-95
            span: 1:70-96
        span: 1:0-96
    span: 1:0-96
