prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__sort_3.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from [{track_id=0, album_id=1, genre_id=2}]\nselect { AA=track_id, album_id, genre_id }\nsort AA\njoin side:left [{album_id=1, album_title=\"Songs\"}] (==album_id)\nselect { AA, AT = album_title ?? \"unknown\", genre_id }\nfilter AA < 25\njoin side:left [{genre_id=1, genre_title=\"Rock\"}] (==genre_id)\nselect { AA, AT, GT = genre_title ?? \"unknown\" }\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_3.prql
---
frames:
- - 1:44-86
  - columns:
    - !Single
      name:
      - AA
      target_id: 156
      target_name: null
    - !Single
      name:
      - _literal_150
      - album_id
      target_id: 157
      target_name: null
    - !Single
      name:
      - _literal_150
      - genre_id
      target_id: 158
      target_name: null
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
- - 1:87-94
  - columns:
    - !Single
      name:
      - AA
      target_id: 156
      target_name: null
    - !Single
      name:
      - _literal_150
      - album_id
      target_id: 157
      target_name: null
    - !Single
      name:
      - _literal_150
      - genre_id
      target_id: 158
      target_name: null
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
- - 1:95-158
  - columns:
    - !Single
      name:
      - AA
      target_id: 156
      target_name: null
    - !Single
      name:
      - _literal_150
      - album_id
      target_id: 157
      target_name: null
    - !Single
      name:
      - _literal_150
      - genre_id
      target_id: 158
      target_name: null
    - !Single
      name:
      - _literal_138
      - album_id
      target_id: 138
      target_name: album_id
    - !Single
      name:
      - _literal_138
      - album_title
      target_id: 138
      target_name: album_title
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
    - id: 138
      name: _literal_138
      table:
      - default_db
      - _literal_138
- - 1:159-213
  - columns:
    - !Single
      name:
      - AA
      target_id: 169
      target_name: null
    - !Single
      name:
      - AT
      target_id: 170
      target_name: null
    - !Single
      name:
      - _literal_150
      - genre_id
      target_id: 174
      target_name: null
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
    - id: 138
      name: _literal_138
      table:
      - default_db
      - _literal_138
- - 1:214-228
  - columns:
    - !Single
      name:
      - AA
      target_id: 169
      target_name: null
    - !Single
      name:
      - AT
      target_id: 170
      target_name: null
    - !Single
      name:
      - _literal_150
      - genre_id
      target_id: 174
      target_name: null
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
    - id: 138
      name: _literal_138
      table:
      - default_db
      - _literal_138
- - 1:229-291
  - columns:
    - !Single
      name:
      - AA
      target_id: 169
      target_name: null
    - !Single
      name:
      - AT
      target_id: 170
      target_name: null
    - !Single
      name:
      - _literal_150
      - genre_id
      target_id: 174
      target_name: null
    - !Single
      name:
      - _literal_125
      - genre_id
      target_id: 125
      target_name: genre_id
    - !Single
      name:
      - _literal_125
      - genre_title
      target_id: 125
      target_name: genre_title
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
    - id: 138
      name: _literal_138
      table:
      - default_db
      - _literal_138
    - id: 125
      name: _literal_125
      table:
      - default_db
      - _literal_125
- - 1:292-340
  - columns:
    - !Single
      name:
      - AA
      target_id: 187
      target_name: null
    - !Single
      name:
      - AT
      target_id: 188
      target_name: null
    - !Single
      name:
      - GT
      target_id: 189
      target_name: null
    inputs:
    - id: 150
      name: _literal_150
      table:
      - default_db
      - _literal_150
    - id: 138
      name: _literal_138
      table:
      - default_db
      - _literal_138
    - id: 125
      name: _literal_125
      table:
      - default_db
      - _literal_125
nodes:
- id: 125
  kind: Array
  span: 1:244-278
  children:
  - 126
  parent: 186
- id: 126
  kind: Tuple
  span: 1:245-277
  children:
  - 127
  - 128
  parent: 125
- id: 127
  kind: Literal
  span: 1:255-256
  alias: genre_id
  parent: 126
- id: 128
  kind: Literal
  span: 1:270-276
  alias: genre_title
  parent: 126
- id: 138
  kind: Array
  span: 1:110-145
  children:
  - 139
  parent: 168
- id: 139
  kind: Tuple
  span: 1:111-144
  children:
  - 140
  - 141
  parent: 138
- id: 140
  kind: Literal
  span: 1:121-122
  alias: album_id
  parent: 139
- id: 141
  kind: Literal
  span: 1:136-143
  alias: album_title
  parent: 139
- id: 150
  kind: Array
  span: 1:0-43
  children:
  - 151
  parent: 160
- id: 151
  kind: Tuple
  span: 1:6-42
  children:
  - 152
  - 153
  - 154
  parent: 150
- id: 152
  kind: Literal
  span: 1:16-17
  alias: track_id
  parent: 151
- id: 153
  kind: Literal
  span: 1:28-29
  alias: album_id
  parent: 151
- id: 154
  kind: Literal
  span: 1:40-41
  alias: genre_id
  parent: 151
- id: 156
  kind: Ident
  span: 1:56-64
  alias: AA
  ident: !Ident
  - this
  - _literal_150
  - track_id
  targets:
  - 150
  parent: 159
- id: 157
  kind: Ident
  span: 1:66-74
  ident: !Ident
  - this
  - _literal_150
  - album_id
  targets:
  - 150
  parent: 159
- id: 158
  kind: Ident
  span: 1:76-84
  ident: !Ident
  - this
  - _literal_150
  - genre_id
  targets:
  - 150
  parent: 159
- id: 159
  kind: Tuple
  span: 1:51-86
  children:
  - 156
  - 157
  - 158
  parent: 160
- id: 160
  kind: 'TransformCall: Select'
  span: 1:44-86
  children:
  - 150
  - 159
  parent: 163
- id: 161
  kind: Ident
  span: 1:92-94
  ident: !Ident
  - this
  - AA
  targets:
  - 156
  parent: 163
- id: 163
  kind: 'TransformCall: Sort'
  span: 1:87-94
  children:
  - 160
  - 161
  parent: 168
- id: 164
  kind: RqOperator
  span: 1:147-157
  targets:
  - 166
  - 167
  parent: 168
- id: 166
  kind: Ident
  span: 1:149-157
  ident: !Ident
  - this
  - _literal_150
  - album_id
  targets:
  - 157
- id: 167
  kind: Ident
  span: 1:149-157
  ident: !Ident
  - that
  - _literal_138
  - album_id
  targets:
  - 138
- id: 168
  kind: 'TransformCall: Join'
  span: 1:95-158
  children:
  - 163
  - 138
  - 164
  parent: 176
- id: 169
  kind: Ident
  span: 1:168-170
  ident: !Ident
  - this
  - AA
  targets:
  - 156
  parent: 175
- id: 170
  kind: RqOperator
  span: 1:177-201
  alias: AT
  targets:
  - 172
  - 173
  parent: 175
- id: 172
  kind: Ident
  span: 1:177-188
  ident: !Ident
  - this
  - _literal_138
  - album_title
  targets:
  - 138
- id: 173
  kind: Literal
  span: 1:192-201
- id: 174
  kind: Ident
  span: 1:203-211
  ident: !Ident
  - this
  - _literal_150
  - genre_id
  targets:
  - 158
  parent: 175
- id: 175
  kind: Tuple
  span: 1:166-213
  children:
  - 169
  - 170
  - 174
  parent: 176
- id: 176
  kind: 'TransformCall: Select'
  span: 1:159-213
  children:
  - 168
  - 175
  parent: 181
- id: 177
  kind: RqOperator
  span: 1:221-228
  targets:
  - 179
  - 180
  parent: 181
- id: 179
  kind: Ident
  span: 1:221-223
  ident: !Ident
  - this
  - AA
  targets:
  - 169
- id: 180
  kind: Literal
  span: 1:226-228
- id: 181
  kind: 'TransformCall: Filter'
  span: 1:214-228
  children:
  - 176
  - 177
  parent: 186
- id: 182
  kind: RqOperator
  span: 1:280-290
  targets:
  - 184
  - 185
  parent: 186
- id: 184
  kind: Ident
  span: 1:282-290
  ident: !Ident
  - this
  - _literal_150
  - genre_id
  targets:
  - 174
- id: 185
  kind: Ident
  span: 1:282-290
  ident: !Ident
  - that
  - _literal_125
  - genre_id
  targets:
  - 125
- id: 186
  kind: 'TransformCall: Join'
  span: 1:229-291
  children:
  - 181
  - 125
  - 182
  parent: 194
- id: 187
  kind: Ident
  span: 1:301-303
  ident: !Ident
  - this
  - AA
  targets:
  - 169
  parent: 193
- id: 188
  kind: Ident
  span: 1:305-307
  ident: !Ident
  - this
  - AT
  targets:
  - 170
  parent: 193
- id: 189
  kind: RqOperator
  span: 1:314-338
  alias: GT
  targets:
  - 191
  - 192
  parent: 193
- id: 191
  kind: Ident
  span: 1:314-325
  ident: !Ident
  - this
  - _literal_125
  - genre_title
  targets:
  - 125
- id: 192
  kind: Literal
  span: 1:329-338
- id: 193
  kind: Tuple
  span: 1:299-340
  children:
  - 187
  - 188
  - 189
  parent: 194
- id: 194
  kind: 'TransformCall: Select'
  span: 1:292-340
  children:
  - 186
  - 193
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Array:
                - Tuple:
                  - Literal:
                      Integer: 0
                    span: 1:16-17
                    alias: track_id
                  - Literal:
                      Integer: 1
                    span: 1:28-29
                    alias: album_id
                  - Literal:
                      Integer: 2
                    span: 1:40-41
                    alias: genre_id
                  span: 1:6-42
                span: 1:5-43
            span: 1:0-43
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:44-50
              args:
              - Tuple:
                - Ident:
                  - track_id
                  span: 1:56-64
                  alias: AA
                - Ident:
                  - album_id
                  span: 1:66-74
                - Ident:
                  - genre_id
                  span: 1:76-84
                span: 1:51-86
            span: 1:44-86
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:87-91
              args:
              - Ident:
                - AA
                span: 1:92-94
            span: 1:87-94
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:95-99
              args:
              - Array:
                - Tuple:
                  - Literal:
                      Integer: 1
                    span: 1:121-122
                    alias: album_id
                  - Literal:
                      String: Songs
                    span: 1:136-143
                    alias: album_title
                  span: 1:111-144
                span: 1:110-145
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - album_id
                    span: 1:149-157
                span: 1:147-157
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:105-109
            span: 1:95-158
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:159-165
              args:
              - Tuple:
                - Ident:
                  - AA
                  span: 1:168-170
                - Binary:
                    left:
                      Ident:
                      - album_title
                      span: 1:177-188
                    op: Coalesce
                    right:
                      Literal:
                        String: unknown
                      span: 1:192-201
                  span: 1:177-201
                  alias: AT
                - Ident:
                  - genre_id
                  span: 1:203-211
                span: 1:166-213
            span: 1:159-213
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:214-220
              args:
              - Binary:
                  left:
                    Ident:
                    - AA
                    span: 1:221-223
                  op: Lt
                  right:
                    Literal:
                      Integer: 25
                    span: 1:226-228
                span: 1:221-228
            span: 1:214-228
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:229-233
              args:
              - Array:
                - Tuple:
                  - Literal:
                      Integer: 1
                    span: 1:255-256
                    alias: genre_id
                  - Literal:
                      String: Rock
                    span: 1:270-276
                    alias: genre_title
                  span: 1:245-277
                span: 1:244-278
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - genre_id
                    span: 1:282-290
                span: 1:280-290
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:239-243
            span: 1:229-291
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:292-298
              args:
              - Tuple:
                - Ident:
                  - AA
                  span: 1:301-303
                - Ident:
                  - AT
                  span: 1:305-307
                - Binary:
                    left:
                      Ident:
                      - genre_title
                      span: 1:314-325
                    op: Coalesce
                    right:
                      Literal:
                        String: unknown
                      span: 1:329-338
                  span: 1:314-338
                  alias: GT
                span: 1:299-340
            span: 1:292-340
        span: 1:0-340
    span: 1:0-340
